[tool.poetry]
name = "app-compras-super"
version = "0.1.0"
description = "Descripción del proyecto"
authors = ["Tu Nombre <tuemail@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
asyncio = "^3.4.3"
telegram = "^0.0.1"
python-telegram-bot = "^21.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
